--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -50,6 +50,7 @@ From {{etyl|fro|en}} {{m|fro|cortine}}, from {{etyl|ML.|en}} {{m|la|cōrtīna||c
 * Armenian: {{t+|hy|վարագույր}}
 * Asturian: {{t|ast|cortina|f}}
 * Azeri: {{t+|az|pərdə}}
+* Basque: {{t|eu|errezel}}, {{t|eu|gortina}}
 * Bashkir: {{t|ba|пәрҙә|sc=Cyrl}}
 * Belarusian: {{t|be|засло́на|f|sc=Cyrl}}, {{t|be|фіра́нка|f|sc=Cyrl}}, {{t|be|занаве́ска|f|sc=Cyrl}}, {{t|be|карты́на|f|sc=Cyrl}}
 * Bengali: {{t|bn|পরদা|tr=pôrda|sc=Beng}}
@@ -144,6 +145,7 @@ From {{etyl|fro|en}} {{m|fro|cortine}}, from {{etyl|ML.|en}} {{m|la|cōrtīna||c
 
 {{trans-top|piece of cloth in a theater}}
 * Armenian: {{t+|hy|վարագույր}}
+* Basque: {{t|eu|antzoki-oihal}}
 * Bashkir: {{t|ba|шаршау|sc=Cyrl}}
 * Bulgarian: {{t+|bg|заве́са|f}}
 * Catalan: {{t|ca|teló|m}}
