--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -197,9 +197,17 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 {{en-verb}}
 
 # To cover (a window) with a curtain; to hang curtains.
-# {{lb|en|figuratively}} To [[hide]] or [[separate]] as if by a curtain.
+#* '''1985''', {{w|Carol Shields}}, "Dolls, Dolls, Dolls, Dolls" in ''The Collected Stories'', Random House Canada, 2004, p. 163,
+#*: The window, softly '''curtained''' with dotted swiss, became the focus of my desperate hour-by-hour attention.
+# {{lb|en|figuratively}} To [[hide]], [[cover]] or [[separate]] as if by a curtain.
 #* c. '''1593''', {{w|William Shakespeare}}, ''{{w|Titus Andronicus}}'', Act II, Scene 2, [http://www.opensourceshakespeare.org/views/plays/play_view.php?WorkID=titus&Scope=entire&pleasewait=1&msg=pl]
 #*: And, after conflict such as was supposed / The wandering prince and Dido once enjoy'd, / When with a happy storm they were surprised / And '''curtain'd''' with a counsel-keeping cave, / We may, each wreathed in the other's arms, / Our pastimes done, possess a golden slumber;
+#* '''1840''', {{w|Percy Bysshe Shelley}}, "{{w|A Defence of Poetry}}" [http://www.gutenberg.org/files/5428/5428-h/5428-h.htm]
+#*: But poetry in a more restricted sense expresses those arrangements of language, and especially metrical language, which are created by that imperial faculty; whose throne is '''curtained''' within the invisible nature of man.
+#* '''1958''', {{w|Ovid}}, ''The {{w|Metamorphoses}}'', translated by {{w|Horace Gregory}}, New York: Viking, Book IV, Perseus, p. 115,
+#*: He saw a rock that pierced the shifting waters / As they stilled, now '''curtained''' by the riding / Of the waves, and leaped to safety on it.
+#* '''2003''', {{w|A. B. Yehoshua}}, ''The Liberated Bride'' (2001), translated by {{w|Hillel Halkin}}, Harcourt, Part 2, Chapter 17, p. 115,
+#*: But bleakness still '''curtained''' the gray horizon.
 
 ====Translations====
 {{trans-top|to cover with a curtain}}
