--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -60,7 +60,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Chinese:
 *: Cantonese: {{t|yue|窗簾|sc=Hani}}, {{t|yue|窗帘|tr=coeng1 lim4-2|sc=Hani}}
 *: Mandarin: {{t+|cmn|窗簾|sc=Hani}}, {{t+|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t+|cmn|簾子|sc=Hani}}, {{t+|cmn|帘子|tr=liánzi|sc=Hani}}
-*: Min Nan: {{t|nan|thang1-li5|sc=Hani}}
+*: Min Nan: {{t|nan|thang1-li5|sc=Hani}}, {{t+|nan|窗仔|tr=thang-á|sc=Hani}}, {{t|nan|窗簾仔|sc=Hani}}, {{t|nan|窗帘仔|tr=thang-lî-á|sc=Hani}}, {{t|nan|窗仔簾|sc=Hani}}, {{t|nan|窗仔帘|tr=thang-á-nî|sc=Hani}}
 * Czech: {{t|cs|závěs|m}}
 * Danish: {{t+|da|gardin|n}}
 * Dutch: {{t+|nl|gordijn|n}}
@@ -93,9 +93,9 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Lao: {{t|lo|ຜ້າມ່ານ|sc=Laoo}}, {{t|lo|ເກີ້ງ|sc=Laoo}}, {{t|lo|ມ່ານ|sc=Laoo}}, {{t|lo|ວິສູດ|sc=Laoo}}, {{t|lo|ສາກ|sc=Laoo}}, {{t+|lo|ຜ້າກັ້ງ|sc=Laoo}}
 * Latvian: {{t|lv|aizkars|m}}
 * Lithuanian: {{t|lt|užuolaida|f}}
+{{trans-mid}}
 * Luxembourgish: {{t|lb|Rido|f}}
 * Macedonian: {{t|mk|завеса|f}}, {{t|mk|перде|n}}
-{{trans-mid}}
 * Malay: {{t|ms|tirai}}, {{t|ms|tabir}}
 * Maltese: {{t|mt|purtiera|f}}
 * Mongolian: {{t+|mn|хөшиг|sc=Cyrl}}
