--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -53,14 +53,14 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Basque: {{t|eu|errezel}}, {{t|eu|gortina}}
 * Bashkir: {{t|ba|пәрҙә|sc=Cyrl}}
 * Belarusian: {{t|be|засло́на|f|sc=Cyrl}}, {{t|be|фіра́нка|f|sc=Cyrl}}, {{t|be|занаве́ска|f|sc=Cyrl}}, {{t|be|карты́на|f|sc=Cyrl}}
-* Bengali: {{t|bn|পরদা|tr=pôrda|sc=Beng}}
+* Bengali: {{t|bn|পরদা|sc=Beng}}
 * Bulgarian: {{t+|bg|перде́|n}}, {{t+|bg|заве́са|f}}
 * Burmese: {{t|my|ကုလားကာ|sc=Mymr}}, {{t+|my|တင်းထိမ်|sc=Mymr}}
 * Catalan: {{t+|ca|cortina|f}}
 * Chinese:
 *: Cantonese: {{t|yue|窗簾|sc=Hani}}, {{t|yue|窗帘|tr=coeng1 lim4-2|sc=Hani}}
 *: Mandarin: {{t+|cmn|窗簾|sc=Hani}}, {{t+|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t+|cmn|簾子|sc=Hani}}, {{t+|cmn|帘子|tr=liánzi|sc=Hani}}
-*: Min Nan: {{t|nan|thang1-li5|sc=Hani}}, {{t+|nan|窗仔|tr=thang-á|sc=Hani}}, {{t|nan|窗簾仔|sc=Hani}}, {{t|nan|窗帘仔|tr=thang-lî-á|sc=Hani}}, {{t|nan|窗仔簾|sc=Hani}}, {{t|nan|窗仔帘|tr=thang-á-nî|sc=Hani}}
+*: Min Nan: {{t+|nan|窗仔|tr=thang-á|sc=Hani}}, {{t|nan|窗簾仔|sc=Hani}}, {{t|nan|窗帘仔|tr=thang-lî-á|sc=Hani}}, {{t|nan|窗仔簾|sc=Hani}}, {{t|nan|窗仔帘|tr=thang-á-nî|sc=Hani}}
 * Czech: {{t|cs|závěs|m}}
 * Danish: {{t+|da|gardin|n}}
 * Dutch: {{t+|nl|gordijn|n}}
@@ -129,7 +129,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Tajik: {{t|tg|парда|sc=Cyrl}}
 * Tamil: {{t-needed|ta}}
 * Telugu: {{t+|te|తెర}}
-* Thai: {{t|th|ผ้าม่าน|tr=pâa-mâan|sc=Thai}}
+* Thai: {{t|th|ผ้าม่าน|sc=Thai}}
 * Turkish: {{t+|tr|perde}}
 * Turkmen: {{t|tk|perde}}, {{t|tk|tuty}}
 * Ukrainian: {{t|uk|заві́са|f|sc=Cyrl}}, {{t|uk|занаві́ска|f|sc=Cyrl}}, {{t|uk|курти́на|f|sc=Cyrl}}, {{t|uk|портьє́ра|f|sc=Cyrl}}
