--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -3,9 +3,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=98021|canj=POMN|ids=⿰忄俞}}
 
-# [[pleasant]], [[delightful]]
-# [[please]]
-
 ====References====
 * {{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109|ud=24841|bh=B472|bd=46194}}
 
@@ -14,6 +11,10 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+{{Han compound|忄|alt1=心|俞|ls=psc|c1=s|c2=p}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=yú
@@ -21,8 +22,16 @@
 |mc=y
 |oc=y
 |ma=
-|cat=a,v
+|cat=a
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# [[happy]]; [[pleased]]; [[delightful]]
+
+===Compounds===
+{{zh-der|勝任愉快|夷愉|心曠神愉|恬愉|愉快|愉悅|愉愉呴呴|愉色|愉逸|敷愉|歡愉}}
 
 ----
 
