t+ru:[[подхватывать]] t+ru:[[подхватить]] t+ru:[[подцеплять]] t+ru:[[подцепить]] ([[WT:EDIT|Assisted]]) <catch#39597232>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -433,7 +433,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * German: {{t-needed|de}}
 * Japanese: {{t-needed|ja}}
 * Khmer: {{t-needed|km}}
-* Russian: {{t-needed|ru}}
+* Russian: {{t+|ru|подхватывать|impf|sc=Cyrl}}, {{t+|ru|подхватить|pf|sc=Cyrl}}, {{t+|ru|подцеплять|impf|sc=Cyrl}}, {{t+|ru|подцепить|pf|sc=Cyrl}}
 * Spanish: {{t+|es|coger}}, {{t+|es|agarrar}}
 * Thai: {{t-needed|th}}
 {{trans-bottom}}
