--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -433,7 +433,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * German: {{t-needed|de}}
 * Japanese: {{t-needed|ja}}
 * Khmer: {{t-needed|km}}
-* Russian: {{t+|ru|подхватывать|impf|sc=Cyrl}}, {{t+|ru|подхватить|pf|sc=Cyrl}}, {{t+|ru|подцеплять|impf|sc=Cyrl}}, {{t+|ru|подцепить|pf|sc=Cyrl}}
+* Russian: {{t+|ru|подхва́тывать|impf|sc=Cyrl}}, {{t+|ru|подхвати́ть|pf|sc=Cyrl}}, {{t+|ru|подцепля́ть|impf|sc=Cyrl}}, {{t+|ru|подцепи́ть|pf|sc=Cyrl}}
 * Spanish: {{t+|es|coger}}, {{t+|es|agarrar}}
 * Thai: {{t-needed|th}}
 {{trans-bottom}}
