--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -73,13 +73,13 @@
 # {{n-g|Particle indicating the word preceding it is used as an adverb.}}
 #: {{zh-x|很 快 地|very quickly}}
 
-=====Usage Notes=====
+=====Usage notes=====
 * The use of this particle is always optional after polysyllabic adverbs. 
 *: {{zh-usex|非常 短|very short}}
 *: {{zh-usex|非常 地 短|very short}}
 * On the contrary, monosyllabic adverbs are compulsorily used with or without 地.
-*: {{zh-usex|很 漂亮|very beautiful}} (where *很地漂亮 is unacceptable)
-*: {{zh-usex|倏 地 不见|to disappear suddenly}} (where *倏不见 is unacceptable)
+*: {{zh-usex|很 漂亮{liang}|very beautiful}} (where *很地漂亮 is unacceptable)
+*: {{zh-usex|倏 地 不見|to disappear suddenly}} (where *倏不見 is unacceptable)
 
 ===Etymology 3===
 {{zh-see|哋|v|''Cantonese plurality marker''}}
