--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -75,11 +75,11 @@
 
 =====Usage notes=====
 * The use of this particle is always optional after polysyllabic adverbs. 
-*: {{zh-usex|非常 短|very short}}
-*: {{zh-usex|非常 地 短|very short}}
+*: {{zh-x|非常 短|very short}}
+*: {{zh-x|非常 地{de} 短|very short}}
 * On the contrary, monosyllabic adverbs are compulsorily used with or without 地.
-*: {{zh-usex|很 漂亮{liang}|very beautiful}} (where *很地漂亮 is unacceptable)
-*: {{zh-usex|倏 地 不見|to disappear suddenly}} (where *倏不見 is unacceptable)
+*: {{zh-x|很 漂亮{liang}|very beautiful}} (where *很地漂亮 is unacceptable)
+*: {{zh-x|倏 地 不見|to disappear suddenly}} (where *倏不見 is unacceptable)
 
 ===Etymology 3===
 {{zh-see|哋|v|''Cantonese plurality marker''}}
