--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -38,21 +38,21 @@
 {{zh-hanzi}}
 
 # [[earth]], [[ground]]
-#* {{zh-x|這 匹 馬 倒 在 地 上。|The horse collapsed to the '''ground'''.}}
+#* {{zh-x|這 匹 馬 倒 在 地上{shang}。|The horse collapsed to the '''ground'''.}}
 # [[distance]]
-#* {{zh-usex|車站 離 這 三 里 地|The bus stop is three miles away.}}
-# {{context|only in compounds|lang=zh}} [[farmland]], [[field]]
-#* {{zh-usex|田 間 地 頭|farmland}}
-#* {{zh-usex|下 地 幹 活|to farm}}
-# {{context|only in compounds|lang=zh}} [[place]], [[location]]
-#* {{zh-usex|本 地|local}}
-#* {{zh-usex|地 處|located in}}
-# {{context|only in compounds|lang=zh}} [[status]], [[situation]]
-#* {{zh-usex|心 地|mind}}
-#* {{zh-usex|見 地|perspective, opinion}}
-# {{context|only in compounds|lang=zh}} the [[Earth]], short for [[地球]]
-#* {{zh-usex|地 日 距離|Earth–Sun distance}}
-#* {{zh-usex|類 地 行星|terrestrial planet}}
+#* {{zh-x|車站 離 這 三 里 地。|The bus stop is three miles away.}}
+# {{lb|zh|only in compounds}} [[farmland]], [[field]]
+#* {{zh-x|田間 地頭|farmland}}
+#* {{zh-x|下地 幹活|to farm}}
+# {{lb|zh|only in compounds}} [[place]], [[location]]
+#* {{zh-x|本地|local}}
+#* {{zh-x|地處|located in}}
+# {{lb|zh|only in compounds}} [[status]], [[situation]]
+#* {{zh-x|心地|mind}}
+#* {{zh-x|見地|perspective, opinion}}
+# {{lb|zh|only in compounds}} {{zh-abbrev|地球|[[Earth]]}}
+#* {{zh-x|地 日 距離|Earth–Sun distance}}
+#* {{zh-x|類 地 行星|terrestrial planet}}
 
 ===Etymology 2===
 {{rfe|zh}}
