--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -21,7 +21,7 @@ See {{m|en|spell}}.
 The form ''spelt'' may predominate over ''spelled'' in parts of North America with heavier English settlement since the 19th century. One such place is New England and much of Canada, particularly in Atlantic Canada.
 
 ===Etymology 2===
-From {{etyl|enm|en}}, from {{etyl|ang|en}} {{m|ang|spelt||spelt, corn}}, from {{etyl|osx|en}} {{m|osx|spelta||spelt}}; or from {{etyl|LL.|en}} {{m|la|spelta||spelt}}, from {{etyl|frk|en}} {{m|frk|*spelta||spelt}}; all from {{etyl|gem-pro|en}} {{m|gem-pro|*spiltō}}, {{m|gem-pro|*spiltaz||spelt}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*(s)pelbh-}}, {{m|ine-pro|*(s)pelbh-t-||spelt, spelt meal}}. Cognate with {{cog|goh|spelza||spelt}}, Modern {{cog|de|Spelz||wheat-like cereal}}, {{cog|nl|spelt||spelt}}.
+From {{etyl|enm|en}}, from {{etyl|ang|en}} {{m|ang|spelt||spelt, corn}}, from {{etyl|osx|en}} {{m|osx|spelta||spelt}}; or from {{etyl|LL.|en}} {{m|la|spelta||spelt}}, from {{etyl|frk|en}} {{m|frk|*spelta||spelt}}; all from {{etyl|gem-pro|en}} {{m|gem-pro|*spiltō}}, {{m|gem-pro|*spiltaz||spelt}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*(s)pelbʰ-}}, {{m|ine-pro|*(s)pelbʰ-t-||spelt, spelt meal}}. Cognate with {{cog|goh|spelza||spelt}}, Modern {{cog|de|Spelz||wheat-like cereal}}, {{cog|nl|spelt||spelt}}.
 
 ====Noun====
 {{en-noun|-}}
