/* Adjective */ Not archaic, a lot of uses in modern books. <unvoluntary#39605011>

--- a/en/u/unvoluntary.7221.wikitext
+++ b/en/u/unvoluntary.7221.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj}}
 
-# {{lb|en|archaic}} [[involuntary]]
+# [[involuntary]]
 #* {{rfdate}} [[Fuller]]
 
 ====Translations====
