--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -77,9 +77,9 @@
 * The use of this particle is always optional after polysyllabic adverbs. 
 *: {{zh-x|非常 短|very short}}
 *: {{zh-x|非常 地{de} 短|very short}}
-* On the contrary, monosyllabic adverbs are compulsorily used with or without 地.
-*: {{zh-x|很 漂亮{liang}|very beautiful}} (where *很地漂亮 is unacceptable)
-*: {{zh-x|倏地{de} 不見|to disappear suddenly}} (where *倏不見 is unacceptable)
+* On the contrary, monosyllabic adverbs are compulsorily used with or without {{lang|zh|地}}.
+*: {{zh-x|很 漂亮{liang}|very beautiful}} (where *{{lang|zh|很地漂亮}} is unacceptable)
+*: {{zh-x|倏地{de} 不見|to disappear suddenly}} (where *{{lang|zh|倏不見}} is unacceptable)
 
 ===Etymology 3===
 {{zh-see|哋|v|''Cantonese plurality marker''}}
