--- a/en/倸/倸.11077.wikitext
+++ b/en/倸/倸.11077.wikitext
@@ -3,19 +3,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OBD|ids=⿰亻采}}
 
-# an alternate term for [[睬]]
-
 ====References====
 * {{Han ref|kx=0109.171|dkj=00822|dj=0233.030|hdz=10181.030|uh=5038|ud=20536}}
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[cǎi]] ([[cai3]])|wg=ts'ai<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
+==Chinese==
+{{zh-see|睬|v}}
 
 ----
 
