--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -2,7 +2,7 @@
 {{character info/new}}
 ==Translingual==
 {{stroke order}}
-{{ja-forms|旧|旧|[[舊]]}}
+{{ja-forms|旧|旧|[[舊#Translingual|&#x820A;]]}}
 
 ===Etymology===
 {{Han simp|𦾔|f=萑|t=&nbsp;}}
