--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -299,6 +299,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Galician: {{t+|gl|vir}}
 * German: {{t+|de|kommen}}, {{t+|de|ankommen}}
 * Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
+* Japanese: {{t+|ja|着く|tr=tsuku|sc=Jpan}}
 * Macedonian: {{t|mk|доаѓа}}, {{t|mk|пристига}}
 {{trans-mid}}
 * Norwegian: {{t|no|ankomme}}, {{t+|no|komme}}
