t+ja:[[来る]] ([[WT:EDIT|Assisted]]) <come#39632215>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -320,6 +320,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Finnish: {{t+|fi|tulla}}, {{t+|fi|olla}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|jön}}
+* Japanese: {{t+|ja|来る|tr=kuru|sc=Jpan}}
 * Turkish: {{t+|tr|gelmek}}
 {{trans-bottom}}
 
