--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -15,6 +15,7 @@
 * Arabic: {{t|ar|نِقْي اَلْعَظْم|m}}, {{t|ar|نُخَاع العَظْم|m}}, {{t|ar|نِقْي|m}}
 * Armenian: {{t+|hy|ոսկրածուծ|sc=Armn}}
 * Azeri: {{t|az|sümük iliyi}}
+* Bashkir: {{t|ba|елек|sc=Cyrl}}
 * Belarusian: {{t|be|касця́вы мозг|m|sc=Cyrl}}
 * Bulgarian: {{t|bg|ко́стен мо́зък|m|sc=Cyrl}}
 * Burmese: {{t+|my|ရိုးတွင်းခြင်ဆီ|sc=Mymr}}
