--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -415,10 +415,11 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 =====Translations=====
 {{trans-top|to make a bridge}}
 * Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}
-{{trans-mid}}
 * German: {{t+|de|überbrücken}}
 * Ido: {{t|io|pontifar}}
+{{trans-mid}}
 * Maori: {{t|mi|kahupapa}}
+* Mongolian: {{t|mn| гүүр тавих|sc=Cyrl}}
 * Quechua: {{t|qu|chakachay}}
 {{trans-bottom}}
 
