--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -24,6 +24,27 @@ The pronunciation is near from French one.
 
 ----
 
+==Cebuano==
+
+===Etymology===
+{{bor|ceb|es|libre}}, from {{etyl|la|ceb}} {{m|la|līber}}, from {{etyl|itc-ola|ceb}} {{m|itc-ola|loeber}}, from {{etyl|itc-pro|ceb}} {{m|itc-pro|*louðeros}}, from {{etyl|ine-pro|ceb}} {{m|ine-pro||*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
+
+===Adjective===
+{{head|ceb|adjective}}
+
+# Without [[charge]]; [[free]]; [[gratis]].
+# Not [[married]]; [[single]]. 
+# At [[liberty]]. 
+# Without [[burden]]. 
+
+===Verb===
+{{head|ceb|verb}}
+
+# To [[treat]], to provide someone with (food, drink, or entertainment) at one's own expense.
+# To pay for another person's purchase.
+
+----
+
 ==French==
 
 ===Etymology===
