/* Translations */remove unneeded RTL or LTR marks using [[Project:AWB|AWB]] <cost#39744135>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -219,7 +219,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Luxembourgish: {{t|lb|kaschten}}
 * Malay: {{t-needed|ms}}
 * Mongolian: {{t-needed|mn}}
-* Navajo: {{t|nv|bą́ą́h ílį́‎}}
+* Navajo: {{t|nv|bą́ą́h ílį́}}
 * Neapolitan: {{t|nap|custà}}
 * Ngazidja Comorian: {{t|zdj|fa|alt=hufa}}
 * Norwegian:
