--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -36,8 +36,8 @@
 |cat=v,n,adv
 }}
 
-===Verb===
-{{zh-verb}}
+===Definitions===
+{{zh-hanzi}
 
 # to [[sit]]
 # to [[go]] [[by]], [[travel]] by, [[ride]]
