--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -105,7 +105,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Lao: {{t+|lo|ກິ່ງ|sc=Laoo}}, {{t|lo|ງ່າ|sc=Laoo}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|zors|m}}
-* Latin: {{t|la|rāmus}}
+* Latin: {{t|la|rāmus}}, {{t|la|sūrus}}
 * Latvian: {{t+|lv|zars|m}}
 * Lithuanian: {{t+|lt|šaka|f}}
 * Macedonian: {{t|mk|гранка|n}}
