--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -122,10 +122,10 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * German: {{t+|de|fühlen}}, {{t+|de|spüren}}
 * Greek: {{t+|el|αισθάνομαι}}
 * Haitian Creole: {{t|ht|santi}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|érez}}, {{t+|hu|tapint}}
+{{trans-mid}}
 * Ido: {{t+|io|sentar}}
-* Irish: {{t|ga|airigh}}
+* Irish: {{t|ga|airigh}}, {{t|ga|mothaigh}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|触れる|tr=ふれる, fureru}}
 * Latgalian: {{t|ltg|just}}, {{t|ltg|pajust}}
@@ -181,7 +181,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Hungarian: {{t+|hu|érez}}
 * Icelandic: {{t+|is|finna}}
 * Indonesian: {{t+|id|merasa}}, {{t+|id|berasa}}
-* Irish: {{t|ga|braith}}, {{t|ga|airigh}}
+* Irish: {{t|ga|braith}}, {{t|ga|airigh}}, {{t|ga|mothaigh}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
 * Norman: {{t|nrf|senti}}
@@ -189,8 +189,8 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Khmer: {{t|km|មានអារម្មណ៍|tr=mien aarɑm|sc=Khmr}}
 * Korean: {{t+|ko|느끼다|sc=Kore}}
 * Kyrgyz: {{t+|ky|сезүү|sc=Cyrl}}
-* Lao: {{t|lo|ຮູ້ສຶກ|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t|lo|ຮູ້ສຶກ|sc=Laoo}}
 * Latin: {{t+|la|sentio}}
 * Latvian: {{t|lv|justies}}
 * Lithuanian: {{t+|lt|jausti}}, {{t|lt|pajusti}}
