--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -28,7 +28,7 @@ In current form, calligraphical rendering of 臼.
 ===Etymology 1===
 {{zh-see|舊}}
 
-===Etymology 2==
+===Etymology 2===
 {{zh-see|臼|v}}
 
 ----
