--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -11,12 +11,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[wun4]]|y=wun4}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=yuán
+|c=wun4
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|三垣|垝垣|垣墉|垣牆|垣衣|城垣|堧垣|女垣|宸垣|寒垣|屬垣|屬垣有耳|張垣市|掖垣|敗宇頹垣|新垣|斷井頹垣|斷垣殘壁|斷壁殘垣|斷壁頹垣|殘垣敗壁|泥垣宮|牆垣|省垣|短垣自逾|破屋壞垣|破瓦頹垣|籬垣|粉垣|補垣塞穴|襄垣縣|踰垣|鑽穴踰垣|陳垣}}
 
 ----
 
@@ -32,15 +48,6 @@
 {{ja-noun|かき}}
 
 # [[fence]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yuán]] ([[yuan2]])|wg=yüan<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
