--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -66,7 +66,7 @@ In current form, calligraphical rendering of 臼.
 {{der-bottom}}
 
 ===Noun===
-{{ja-noun|きゅう}}
+{{ja-noun|きゅう|kyu=舊|hhira=きう}}
 
 # [[old]] things, original state, former state, old times
 # the old calendar based on a lunar system
