--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -76,11 +76,11 @@ In current form, calligraphical rendering of 臼.
 # [[used]] item, [[secondhand]] item
 
 ===Prefix===
-{{ja-pos|きゅう|prefix}}
+{{ja-pos|きゅう|prefix|kyu=舊|hhira=きう}}
 
 # [[paleo-]], [[ex-]], [[old]], [[previous]], [[former]]
 
-{{ja-pos|ふる|prefix}}
+{{ja-pos|ふる|prefix|kyu=舊}}
 
 # [[paleo-]], [[old]], [[used]], [[previous]]
 
