--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -51,7 +51,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# admirable
 
 ====Readings====
 * {{ja-readings|on=[[い]] (i), {{qualifier|historical}} [[ゐ]] (wi)|kun=[[えらい]] (erai), [[ひいでる]] (hiideru), [[すぐれる]] (sugureru)}}
