--- a/en/慁/慁.15700.wikitext
+++ b/en/慁/慁.15700.wikitext
@@ -20,9 +20,19 @@
 |c=wan6
 |mc=y
 |oc=y
-|ma=
-|cat=v
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|慁慁}}
+
+===References===
+* {{R:twedu|B01163}}
 
 ----
 
