--- a/en/愒/愒.15654.wikitext
+++ b/en/愒/愒.15654.wikitext
@@ -13,15 +13,29 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
-|m=kài
-|c=kai3,koi3
+|m=qì,kài
+|c=hot3,kai3,koi3,hei3
 |mc=y
 |oc=y
-|ma=
-|cat=v
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|忨愒|愒日|玩愒|玩日愒歲|玩歲愒日}}
+
+===References===
+* {{R:twedu|B01144}}
+* {{R:yue:Hanzi}}
 
 ----
 
