--- a/en/愒/愒.15654.wikitext
+++ b/en/愒/愒.15654.wikitext
@@ -30,6 +30,20 @@
 
 # {{rfdef|zh}}
 
+===Pronunciation===
+{{zh-pron
+|m=qì
+|c=hei3
+|mc=
+|oc=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-alt-form|憩}}
+
 ====Compounds====
 {{zh-der|忨愒|愒日|玩愒|玩日愒歲|玩歲愒日}}
 
