--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -35,7 +35,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=人08}}
 
-# {{defn|lang=ja|sort=人08}}
+# ethics
 
 ====Readings====
 * {{ja-readings|goon=[[りん]] (rin)|kanon=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
