--- a/en/偰/偰.11136.wikitext
+++ b/en/偰/偰.11136.wikitext
@@ -10,12 +10,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms|alt=契}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=sit3}}
+===Pronunciation===
+{{zh-pron
+|m=xiè
+|c=sit3
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|偰列箎}}
+
+===References===
+* {{R:twedu|B00104}}
 
 ----
 
@@ -37,15 +53,6 @@
 {{ko-hanja|hangeul=설|rv=seol|mr=sŏl}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xiè]] ([[xie4]])|wg=hsieh<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偰]]
 [[li:偰]]
