--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -292,7 +292,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Wallisian: {{t|wls|Siamani}}
 * Walloon: {{t+|wa|Almagne|f}}
 * Waray-Waray: {{t|war|Alemanya}}
-* Welsh: {{t+|cy|Almaen|f}}
+* Welsh: {{t+|cy|Yr Almaen|f}}
 * West Flemish: {{t|vls|Duutsland}}
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Wolof: {{t|wo|Almaañ}}
