--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -1,13 +1,13 @@
 ==English==
 {{wikipedia}}
-
+[[File:Markknochen-1.jpg|thumb|right|transected beef bones, exposing their [[marrow]] inside]]
 ===Alternative forms===
 * {{l|en|bonemarrow}}
 
 ===Noun===
 {{en-noun|head=[[bone]] [[marrow]]|-|s}}
 
-# {{lb|en|anatomy}} The [[fatty]] [[vascular]] [[tissue]] that fills the [[cavities]] of bones; the place where new [[blood]] [[cell]]s are produced.
+# {{lb|en|anatomy}} The [[fatty]] [[vascular]] [[tissue]] that fills the [[cavities]] of bones, being the place where new [[blood]] [[cell]]s are produced.
 
 ====Translations====
 {{trans-top|bone marrow}}
