--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -92,6 +92,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Friulian: {{t|fur|biel|m}}, {{t|fur|biele|f}}
 * Georgian: {{t|ka|მშვენიერი|sc=Geor}}, {{t|ka|ლამაზი|sc=Geor}}, {{t|ka|ტურფა|sc=Geor}}, {{t|ka|საუცხოო|sc=Geor}}, {{t|ka|საყვარელი|sc=Geor}}, {{t|ka|მომხიბლავი|sc=Geor}}, {{t|ka|მიმზიდველი|sc=Geor}}, {{t|ka|სასიამოვნო|sc=Geor}}, {{t|ka|სანდომიანი|sc=Geor}}, {{t|ka|წარმტაცი|sc=Geor}}, {{t|ka|თვალწარმტაცი|sc=Geor}}, {{t|ka|კოხტა|sc=Geor}}, {{t|ka|მოხდენილი|sc=Geor}}, {{t|ka|პირმშვენიერი|sc=Geor}}
 * German: {{t+|de|schön}}
+* Gothic: {{t|got|𐍃𐌺𐌰𐌿𐌽𐍃}}
 * Greek: {{t+|el|ωραίος}}, {{t+|el|όμορφος}}
 *: Ancient: {{t|grc|καλός}}
 * Hebrew: {{t+|he|יָפֶה|m|tr=yafé}}, {{t+|he|יָפָה|f|tr=yafá}}
