--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,7 +1,7 @@
 ==French==
 
 ===Etymology===
-From {{inh|fr|fro|jeudi}}, from {{inh|fr|la||Jovis diēs}} or {{m|la||Iovis diēs}}, variant of {{m|la|diēs Iovis||day of Jupiter}}.
+From {{inh|fr|fro|jeudi}}, {{m|fro|jusdi}}, from {{inh|fr|la||Jovis diēs}} or {{m|la||Iovis diēs}}, variant of {{m|la|diēs Iovis||day of Jupiter}}.
 
 ===Pronunciation===
 * {{IPA|/ʒø.di/|lang=fr}}
@@ -35,7 +35,7 @@ From {{inh|fr|fro|jeudi}}, from {{inh|fr|la||Jovis diēs}} or {{m|la||Iovis diē
 * {{l|nrf|djödi}} {{qualifier|Sark}}
 
 ===Etymology===
-From {{inh|nrf|fro|jeudi}}, from {{inh|nrf|la||Jovis diēs}} or {{m|la||Iovis diēs}}, a variant of {{m|la|diēs Iovis||day of Jupiter}}.
+From {{inh|nrf|fro|jeudi}}, {{m|fro|jusdi}}, from {{inh|nrf|la||Jovis diēs}} or {{m|la||Iovis diēs}}, a variant of {{m|la|diēs Iovis||day of Jupiter}}.
 
 ===Noun===
 {{nrf-noun|m}}
@@ -47,6 +47,9 @@ From {{inh|nrf|fro|jeudi}}, from {{inh|nrf|la||Jovis diēs}} or {{m|la||Iovis di
 ----
 
 ==Old French==
+
+===Alternative forms===
+* {{l|fro|jusdi}}, {{l|fro|juesdi}}
 
 ===Etymology===
 From {{inh|fro|la||Jovis diēs}} or {{m|la||Iovis diēs}}, variant of {{m|la|diēs Iovis}}.
