/* Translations */ <bone marrow#39875872>

--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -72,7 +72,7 @@
 * Swedish: {{t+|sv|benmärg|c}}
 * Tagalog: {{t|tl|bulalo}}
 * Tajik: {{t|tg|мағзи устухон}}
-* Thai: {{t|th|ไขกระดูก|tr=kǎi grà-dùuk|sc=Thai}}
+* Thai: {{t|th|ไขกระดูก|sc=Thai}}
 * Turkish: {{t|tr|kemik iliği}}
 * Turkmen: {{t|tk|ýilik}}
 * Ukrainian: {{t|uk|кістко́вий мо́зок|m|sc=Cyrl}}
