--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -11,12 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[geoi1]]|y=geui1}}
-
-# {{defn|lang=yue|sort=人08}}
+==Chinese==
+{{zh-see|俱|v}}
 
 ----
 
@@ -41,18 +37,6 @@
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
-
-#All, together
-#:'''Tang Dynasty'''
-#::[[倶舎]]
-#:::''[[Sarvastivada|Sarvāstivāda]]'' (Early Buddhist school; this is an earlier two-character name, later the longer 說一切有部 is used.) {{mdash}} in this compound noun, '''倶''' is combined with [[舎]] meaning reside to render the philosophical notion "residing together" or "unified", being the school's core belief: "the existence of all [[dharma]]s in the past, present and future".
 
 [[fr:倶]]
 [[ko:倶]]
