--- a/en/偺/偺.11146.wikitext
+++ b/en/偺/偺.11146.wikitext
@@ -10,12 +10,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=|y=ja1}}
-
-# {{defn|lang=yue|sort=人09}}
+==Chinese==
+{{zh-see|咱}}
 
 ----
 
@@ -28,15 +24,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[さん]] (san)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zá]] ([[za2]])|wg=tsa<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
