--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -341,6 +341,10 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|to strain a muscle or ligament or tendon}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|slang: persuade (a person) to have sex with one}}
 * Finnish: {{t+|fi|iskeä}}
 {{trans-mid}}
