--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -50,7 +50,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 {{der-bottom}}
 
 ====Translations====
-{{trans-top|sound caused by a lightning}}
+{{trans-top|sound caused by lightning}}
 * Abkhaz: {{t|ab|aдыд|sc=Cyrl}}
 * Adyghe: {{t|ady|шыблэ}}
 * Albanian: {{t+|sq|bubullimë|f}}
