--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -606,7 +606,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * Norman: {{t|nrf|coper}}
 * Latin: {{t|la|seco}}, {{t|la|interseco}}, {{t|la|curto}}
 * Latvian: {{t+|lv|griezt}}
-* Maori: {{t|mi|whakaiho}} {{qualifier|of hair}}
+* Maori: {{t|mi|whakaiho}} {{qualifier|of hair}}, {{t|mi|tarotaro}} {{qualifier|of hair}}
 * Portuguese: {{t+|pt|cortar}}
 * Quechua: {{t|qu|kuchuy}}, {{t|qu|p'itiy}}
 * Romanian: {{t+|ro|tăia}}
