--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -294,7 +294,7 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 {{bor|en|xno|conte}} and {{bor|en|fro|comte||count|notext=1}}, from {{der|en|la|comes||[[companion]]}} (more specifically derived from its accusative form {{m|la|comitem}}) in the sense of "noble fighting alongside the king".
 
 ====Noun====
-{{en-noun}}
+{{head|en|noun|plural|counts|feminine|countess}}
 
 # The [[male]] [[ruler]] of a [[county]].
 # A [[nobleman]] [[hold]]ing a [[rank]] [[intermediate]] between [[duke]]s and [[baron]]s.
