--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -72,6 +72,8 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 
 ====Translations====
 {{trans-top|act of pulling}}
+* Chinese:
+*: Mandarin: {{t+|cmn|拉|tr=lā|sc=Hani}}
 * Czech: {{t+|cs|tah|m}}
 * Finnish: {{t+|fi|veto}}
 * Kurdish:
