t+vo:[[Yisraelän]] t-balance ([[WT:EDIT|Assisted]]) <Israel#39924495>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -113,8 +113,8 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Kazakh: {{t|kk|Израиль|sc=Cyrl}}
 * Khmer: {{t+|km|អ៊ីស្រាអែល|tr=iisraa’ael|sc=Khmr}}
 * Kikuyu: {{t|ki|Israel}}
-{{trans-mid}}
 * Korean: {{t|ko|^이스라엘|sc=Hang}}
+{{trans-mid}}
 * Kyrgyz: {{t|ky|Израиль|sc=Cyrl}}
 * Lao: {{t|lo|ອິດສະລະແອນ|sc=Laoo}}
 * Latin: {{t|la|Israel}}
@@ -171,6 +171,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Uzbek: {{t+|uz|Isroil}}
 * Veps: {{t|vep|Izrail'}}
 * Vietnamese: {{t+|vi|Israel}}, {{t|vi|Ixraen}}
+* Volapük: {{t|vo|Yisraelän}}
 * Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}
 {{trans-bottom}}
 
