--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -43,7 +43,7 @@ From {{etyl|la|en}} {{m|la|i.e.}}, an abbreviation of {{m|la|id est||it is}}.
 * Hebrew: {{t|he|דהיינו|tr=deháinu}}, {{t|he|כלומר|tr=klomár}}, {{t|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}, {{t+|hu|ill.}}
 * Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
-* Ido: {{t+|io|c.e.}}
+* Ido: {{t+|io|t.e.}}
 * Irish: {{t|ga|.i.}}<!-- {{qualifier|{{t|ga|eadhon}}}} -->
 * Italian: {{t+|it|cioè}}
 {{trans-mid}}
