--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -160,7 +160,7 @@
 * Sotho: {{t|st|Amerika}}
 * Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
-* Swedish: {{t+|sv|Amerikas förenta stater}}, {{t+|sv|Förenta staterna}}
+* Swedish: {{t+|sv|Amerikas förenta stater}}, {{t+|sv|Förenta staterna}}, {{t+|sv|USA}}, {{t|sv|Staterna}}
 * Tagalog: {{t|tl|Estados Unidos ng Amerika}}, {{t|tl|Nangagkakaisang Banwa ng Amerika}}
 * Tajik: {{t|tg|Иёлоти Муттаҳидаи Амриқо|sc=Cyrl}}
 * Tamil: {{t+|ta|அமெரிக்க ஐக்கிய நாடு|sc=Taml}}
