--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -339,9 +339,9 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 * Greek: {{t+|el|κόμης|m}}
 * Hawaiian: {{t|haw|kauna}}
 * Hebrew: {{t|he|רוזן|m|tr=rozen|sc=Hebr}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|gróf}}
 * Icelandic: {{t+|is|greifi|m}}
+{{trans-mid}}
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku|sc=Jpan}}
@@ -351,7 +351,9 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 * Lithuanian: {{t|lt|grafas|m}}
 * Macedonian: {{t|mk|гроф|m|tr=grof}}
 * Marathi: {{t|mr|काउन्ट|m|tr=kāunṭa|sc=Deva}}
-* Norwegian: {{t+|no|greve|m}}
+* Norwegian:
+*: Bokmål: {{t+|nb|greve|m}}
+*: Nynorsk: {{t|nn|greve|m}}
 * Old English: {{t|ang|eorl|m}}
 * Old High German: {{t|goh|grāvo}}
 * Polish: {{t+|pl|hrabia|m}}
