--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -21,7 +21,7 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 |passage=According to this saga of intellectual-property misanthropy, these creatures [patent trolls] roam the business world, buying up patents and then using them to demand extravagant payouts from companies they accuse of infringing them. Often, their victims pay up rather than face the '''costs''' of a legal battle.}}
 #: {{ux|en|The total '''cost''' of the new complex was an estimated $1.5 million.}}
 #: {{ux|en|We have to cut '''costs''' if we want to avoid bankruptcy.}}
-#: {{ux|en|The average '''cost''' of a new house is twice as much as t was 20 years ago.}}
+#: {{ux|en|The average '''cost''' of a new house is twice as much as it was 20 years ago.}}
 # A negative [[consequence]] or loss that occurs or is required to occur.
 #: {{ux|en|There were many '''costs''' to the development project, the least of all was the financial aspect.}}
 #: {{ux|en|If you train all the time, there will be a few '''costs''' such as a lack of free time.}}
