t+scn:[[sucari]] t+co:[[suchjà]] ([[WT:EDIT|Assisted]]) <suck#40052920>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -84,6 +84,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Bulgarian: {{t+|bg|смуча}}
 * Burmese: {{t+|my|စုပ်|sc=Mymr}}
 * Catalan: {{t+|ca|xuclar}}
+* Corsican: {{t+|co|suchjà}}
 * Czech: {{t+|cs|sát}}, {{t|cs|nasávat}}
 * Danish: {{t|da|suge}}
 * Dutch: {{t+|nl|zuigen}}
@@ -130,6 +131,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|си̏сати}}
 *: Roman: {{t+|sh|sȉsati}}
+* Sicilian: {{t+|scn|sucari}}
 * Slovak: {{t|sk|cmúľať}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|cycaś}}
