--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -16,7 +16,8 @@ In current form, calligraphical rendering of 臼.
 # [[former]], [[past]]
 
 ====Derived characters====
-* [[児]] [[陥]] [[稲]] These characters are {{Han simp|臼|t=旧}}
+* [[児]] [[陥]] [[稲]] 
+# These characters are {{Han simp|臼|t=旧}}
 
 ====References====
 * {{Han ref|kx=0489.051|dkj=13737|dj=0850.040|hdz=21483.020|uh=65E7|ud=26087}}
