--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -56,11 +56,11 @@
 
 ====Compounds====
 {{top3}}
-* {{l|ja|sc=Jpan|倫理|tr=りんり, rinri}}
+* {{ja-r|倫理|りんり}}
 {{mid3}}
-* {{l|ja|sc=Jpan|倫敦|tr=ろんどん, rondon}}
+* {{ja-r|倫敦|^ロンドン}}
 {{mid3}}
-* {{l|ja|sc=Jpan|絶倫|tr=ぜつりん, zetsurin}}
+* {{ja-r|絶倫|ぜつりん}}
 {{bottom}}
 
 ----
