--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -15,12 +15,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[aau1]], [[aau3]]|y=aau1, aau3}}
+===Pronunciation===
+{{zh-pron
+|m=ào
+|c=aau1,aau3,ngaau3,ngaau1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|坳堂|坳塘|塘坳|山坳}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -42,24 +58,6 @@
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''坳''' ([[qau]])
-
-# {{defn|lang=ltc|sort=土05}}
 
 ----
 
