head fixes <New Zealand#40554013>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -181,7 +181,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 {{wikipedia|lang=da}}
 
 ===Proper noun===
-{{head|da|proper noun}}
+{{head=[[new|New]] [[Zealand]]|da|proper noun}}
 
 # {{l|en|New Zealand}} (country in Oceania)
 
@@ -197,7 +197,7 @@ As there is no adjective derived from New Zealand, it is also used in the attrib
 {{wikipedia|lang=nn}}
 
 ===Proper noun===
-{{head|no|proper noun}}
+{{head=[[new|New]] [[Zealand]]|no|proper noun}}
 
 # {{l|en|New Zealand}}
 
