--- a/en/偆/偆.11093.wikitext
+++ b/en/偆/偆.11093.wikitext
@@ -1,8 +1,5 @@
 ==Translingual==
 
-===Etymology===
-{{Han etym}}
-
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=25263|canj=OQKA|ids=⿰亻春}}
 
@@ -13,12 +10,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ceon2]]|y=cheun2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人09}}
+===Pronunciation===
+{{zh-pron
+|m=chūn
+|c=ceon2
+|mn=chhun
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:twedu|C00205}}
 
 ----
 
@@ -40,15 +54,6 @@
 {{ko-hanja|hangeul=준|rv=Jun|mr=ch'un}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chǔn]] ([[chun3]])|wg=ch'un<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偆]]
 [[li:偆]]
