--- a/en/偢/偢.11122.wikitext
+++ b/en/偢/偢.11122.wikitext
@@ -10,12 +10,32 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chau1}}
+===Etymology 1===
+{{zh-forms}}
 
-# {{defn|lang=yue|sort=人09}}
+====Pronunciation====
+{{zh-pron
+|m=chǒu
+|c=ciu2,cau2
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+=====Compounds=====
+{{zh-der|不偢不倸|偢問|偢采}}
+
+===References===
+* {{R:twedu|ㄓㄡˋ}}
+* {{R:yue:Hanzi}}
+
+===Etymology 2===
+{{zh-see|僽|v}}
 
 ----
 
@@ -37,15 +57,6 @@
 {{ko-hanja|hangeul=초|rv=cho|mr=ch'o}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chǒu]] ([[chou3]])|wg=ch'ou<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偢]]
 [[li:偢]]
