--- a/en/偨/偨.11128.wikitext
+++ b/en/偨/偨.11128.wikitext
@@ -10,12 +10,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ci1]], [[zi1]]|y=chi1, ji1}}
+===Pronunciation===
+{{zh-pron
+|m=cī
+|c=ci1,zi1
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:twedu|B00136}}
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -37,15 +49,6 @@
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[cī]] ([[ci1]])|wg=tz'u<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
