--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -10,12 +10,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=fu6}}
+===Pronunciation===
+{{zh-pron
+|m=fù
+|c=fu6
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:twedu|B00123}}
 
 ----
 
@@ -37,15 +50,6 @@
 {{ko-hanja|hangeul=부|rv=bu|mr=pu}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偩]]
 [[li:偩]]
