--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -63,7 +63,7 @@ Compare {{cog|sco|came||comb}}, {{m|sco|caim||comb}}, and {{cog|enm|camet||silve
 ===Anagrams===
 * {{l|en|acme}}, {{l|en|ACME}}, {{l|en|ECMA}}, {{l|en|eMac}}, {{l|en|EMAC}}, {{l|en|mace}}, {{l|en|Mace}}
 
-[[Category:200 English basic words]]
+[[Category:English basic words]]
 [[Category:English irregular simple past forms]]
 
 ----
