rename basic-words categories per RFM using [[Project:AWB|AWB]] <find#40574945>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -60,7 +60,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 # {{lb|en|intransitive|legal}} To [[determine]] or [[judge]].
 #: {{ux|en|The jury '''finds''' for the defendant.}}
 # {{lb|en|intransitive|hunting}} To discover game.
-#* '''1945''', {{w|Nancy Mitford}}, ''The Pursuit of Love'', Penguin 2010, p. 57:
+#* '''1945''', {{w|Nancy Mitford}}, ''The Pursuit of Love'', Penguin 2010, page 57:
 #*: They '''found''' at once, and there was a short sharp run, during which Linda and Tony, both in a somewhat showing-off mood, rode side by side over the stone walls.
 
 ====Synonyms====
@@ -312,10 +312,8 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 ===Anagrams===
 * {{l|en|NFID}}
 
-[[Category:200 English basic words]]
+[[Category:English basic words]]
 [[Category:English irregular verbs]]
-
-[[Category:1000 English basic words]]
 
 ----
 
