--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -135,7 +135,7 @@ From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}}
 ===References===
 <references/>
 
-[[Category:1000 Japanese basic words|ほし]]
+[[Category:Japanese basic words|ほし]]
 [[Category:ja:Astronomy|ほし]]
 
 ----
