--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -345,7 +345,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * {{l|en|branch off}}
 * {{l|en|branch out}}
 
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 
 ----
 
