--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -507,7 +507,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 ===Anagrams===
 * {{l|en|begird}}
 
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 [[Category:en:Bridges]]
 
 ----
