--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -262,7 +262,7 @@ From {{etyl|enm|en}} {{m|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{e
 
 [[Category:English irregular verbs]]
 
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 
 [[ar:choose]]
 [[az:choose]]
