/* Anagrams */rename basic-words categories per RFM using [[Project:AWB|AWB]] <cost#40579202>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -300,7 +300,7 @@ From {{etyl|fro|fr}} ''[[coste]]'' from {{etyl|la|fr}} ''[[costa]]''.
 [[Category:English verb forms using redundant wikisyntax]]
 [[Category:English verbs with base form identical to past participle]]
 
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 
 ----
 
