--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -787,7 +787,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 ===Anagrams===
 * {{l|en|UTC}}
 
-[[Category:1000 English basic words]]
+[[Category:English basic words]]
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
