--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -10,12 +10,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=yi2}}
+===Pronunciation===
+{{zh-pron
+|m=yī
+|c=ji2
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -37,15 +50,6 @@
 {{ko-hanja|hangeul=의|rv=ui|mr=ŭi}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǐ]] ([[yi3]])|wg=i<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偯]]
 [[li:偯]]
