--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -20,12 +20,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[goi1]]|y=goi1}}
+===Pronunciation===
+{{zh-pron
+|m=gāi
+|c=goi1
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|九垓|八垓|半垓|垓下|垓下歌|垓前|垓埏|垓心|垓極|大會垓|鬧垓垓}}
 
 ----
 
@@ -54,15 +67,6 @@
 {{ko-hanja|hangeul=해|rv=hae|mr=hae}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gāi]] ([[gai1]]), [[hòu]] ([[hou4]])|wg=kai<sup>1</sup>, hou<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
