--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -195,6 +195,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 {{trans-top|to engage in combat}}
 * Armenian: {{t+|hy|մարտնչել}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
+* Belarusian: {{t|be|ваява́ць|impf|sc=Cyrl}}
 * Bulgarian: {{t|bg|бия се|sc=Cyrl}}
 * Catalan: {{t+|ca|combatre}}
 * Czech: {{t+|cs|bojovat}}
@@ -226,11 +227,12 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Portuguese: {{t+|pt|combater}}, {{t+|pt|lutar}}
 * Romanian: {{t+|ro|combate}}
 * Romansch: {{t|rm|cumbatter}}
-* Russian: {{t+|ru|би́ться|impf}}, {{t+|ru|сража́ться|impf}}
+* Russian: {{t+|ru|би́ться|impf}}, {{t+|ru|сража́ться|impf}}, {{t+|ru|воева́ть|impf|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Spanish: {{t+|es|combatir}}
 * Swahili: {{t+|sw|vita}}
 * Tok Pisin: {{t|tpi|paitim}}
+* Ukrainian: {{t|uk|воюва́ти|impf|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|to counteract}}
