--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -70,7 +70,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Aromanian: {{t|rup|alumtu}}
 * Azeri: {{t+|az|döyüşmək}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
-* Belarusian: {{t|be|бі́цца|impf|sc=Cyrl}}, {{t|be|змага́цца|impf|sc=Cyrl}}
+* Belarusian: {{t|be|бі́цца|impf|sc=Cyrl}}, {{t|be|змага́цца|impf|sc=Cyrl}}, {{t|be|ваява́ць|impf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|боря|impf|alt=боря́ се}}, {{t+|bg|бия|impf|alt=би́я се|sc=Cyrl}}
 * Burmese: {{t+|my|ရန်ဖြစ်|sc=Mymr}}
 * Catalan: {{t+|ca|lluitar}}, {{t+|ca|barallar-se}}
@@ -123,7 +123,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Portuguese: {{t+|pt|lutar}} com, {{t+|pt|contra}}
 * Romanian: {{t+|ro|lupta}}, {{t|ro|se bate}}
 * Romansch: {{t|rm|lutgar}}
-* Russian: {{t+|ru|дра́ться|impf}}, {{t+|ru|би́ться|impf}}, {{t+|ru|боро́ться|impf}} ''wrestle'', {{t+|ru|сража́ться|impf}} ''in a duel or battle''
+* Russian: {{t+|ru|дра́ться|impf}}, {{t+|ru|би́ться|impf}}, {{t+|ru|боро́ться|impf}} ''wrestle'', {{t+|ru|сража́ться|impf}} ''in a duel or battle'', {{t+|ru|воева́ть|impf|sc=Cyrl}}
 * Sanskrit: {{t-needed|sa}}
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Serbo-Croatian:
@@ -143,7 +143,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Tok Pisin: {{t|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}, {{t+|tr|dövüşmek}}
 * Tuvan: {{t|tyv|демисежир}}
-* Ukrainian: {{t+|uk|би́тися|impf|sc=Cyrl}}; {{t+|uk|боро́тися|impf|sc=Cyrl}}
+* Ukrainian: {{t+|uk|би́тися|impf|sc=Cyrl}}; {{t+|uk|боро́тися|impf|sc=Cyrl}}, {{t|uk|воюва́ти|impf|sc=Cyrl}}
 * Urdu: {{t|ur|لڑنا|tr=laṛnā|sc=ur-Arab}}, {{t|ur|جھگڑنا|tr=jhagaṛnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|chiến đấu}}
 * Welsh: {{t+|cy|brwydro}}
