--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -5,7 +5,7 @@
 From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}} and {{cog|arc|אַרְעָא}}.
 
 ===Pronunciation===
-* {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
+* {{a|IL}} {{IPA|/ˈeʁet͡s/|lang=he}}
 
 ===Noun===
 {{he-noun|g=f|tr='éretz|wv=אֶרֶץ|pl=אֲרָצוֹת|cons=אֶרֶץ|plcons=אַרְצוֹת|pausal=אָרֶץ|pat=קֶטֶל}}
