--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -60,7 +60,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 {{rel-bottom}}
 
 ====Translations====
-{{trans-top|to contend in physical conflict}}
+{{trans-top|(intransitive) to contend in physical conflict}}
 * Afrikaans: {{t|af|stryd}}
 * Albanian: {{t|sq|luftën}}
 * Arabic: {{t+|ar|قَاتَلَ}}, {{t|ar|تَقَاتَلَ}}, {{t|ar|تَحَارَبَ}}, {{t|ar|حَارَبَ}}
@@ -175,7 +175,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Swahili: {{t+|sw|vita}}
 {{trans-bottom}}
 
-{{trans-top|to conduct or engage in}}
+{{trans-top|(transitive) to engage in (a physical conflict)}}
 * Bulgarian: {{t|bg|сражавам се|sc=Cyrl}}
 * Czech: {{t+|cs|bojovat}}
 * Dutch: {{t|nl|uitvechten}}
@@ -192,7 +192,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Swahili: {{t+|sw|vita}}
 {{trans-bottom}}
 
-{{trans-top|to engage in combat}}
+{{trans-top|(transitive) to contend in physical conflict against}}
 * Armenian: {{t+|hy|մարտնչել}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
 * Belarusian: {{t|be|ваява́ць|impf|sc=Cyrl}}
