--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -263,7 +263,7 @@ Cognate with {{cog|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust||taste, flav
 ====Noun====
 {{en-noun}}
 
-# [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
+# {{lb|en|obsolete}} [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
 #* Pecock
 #*: This word "graved image" betokenneth, needs '''cost''',.. a feigned graved image.  
 # [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]]; a [[wont]] or [[habit]]; [[disposition]]; [[nature]]; [[kind]]; [[characteristic]].
