--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -419,12 +419,12 @@ From {{etyl|enm|en}} {{m|enm|feele}}, {{m|enm|fele}}, {{m|enm|feole}}, from {{et
 ====Adjective====
 {{en-adj|-}}
 
-# {{alternative form of|fele|lang=en}}
+# {{lb|en|dialectal|or|obsolete}} {{alternative form of|fele|lang=en}}
 
 ====Adverb====
 {{en-adv|-}}
 
-# {{alternative form of|fele|lang=en}}
+# {{lb|en|dialectal|or|obsolete}} {{alternative form of|fele|lang=en}}
 
 [[Category:English basic words]]
 [[Category:English copulative verbs]]
