/* English */ +pedia <saffron#40742038>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -2,7 +2,6 @@
 ==English==
 [[Image:Crocus_sativus_sahuran.jpg|thumb|''[[Crocus sativus]]'']]
 [[Image:Iran saffron threads.jpg|thumb|'''saffron''' (spice): the dried threads from the stigma of ''Crocus sativus'']]
-{{wikipedia}}
 
 ===Etymology===
 From {{etyl|fro|en}} {{m|fro|safran}}, from {{etyl|ML.|en}} {{m|la|safranum}}, from {{etyl|ar|en}} {{m|ar|زَعْفَرَان}}, from {{etyl|fa|en}} {{m|fa|tr=zar-parân|*زرپران|lit=with golden leafs}}.
@@ -198,6 +197,9 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 {{trans-mid}}
 * Sanskrit: {{t-check|sa|केसर|tr=kesar|sc=Deva}}, {{t-check|sa|केसरं|tr=kesaran|sc=Deva}}
 {{trans-bottom}}
+
+====External links====
+* {{pedialite}}
 
 ===Adjective===
 {{en-adj|?}}
