--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -59,16 +59,16 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 {{ja-kanjitab|yomi=k|むかし}}
 From {{etyl|ojp|ja|sort=むかし}}. The ''muka'' portion derives from the {{m|ja|未然形|tr=mizenkei||incomplete form}} of verb {{m|ja|向く|tr=muku||to face opposite to something}}, implying “that which stands opposite from the present”. The ''shi'' portion is suffix {{m|ja|し|tr=shi}} indicating [[direction]], also found in words {{m|ja|縦し|tr=tatashi||the standing or vertical direction}}, {{m|ja|横し|tr=yokoshi||the sideways or horizontal direction}}. This appears to be a somewhat rare alternative form, more commonly encountered as {{m|ja|さ|tr=sa}}, and may be cognate with the nominalizing adjective ending {{m|ja|さ|tr=sa}}.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref>
 
-===Pronunciation===
+====Pronunciation====
 {{ja-pron|yomi=k|むかし|acc=0|acc_ref=DJR}}
 
-===Adverb===
+====Adverb====
 {{ja-pos|adverb|むかし}}
 
 # [[once]] {{qualifier|in the indeterminate past}}
 #: {{ja-usex|'''昔'''見た映画|'''むかし''' みた えいが|a movie I '''once''' saw}}
 
-===Noun===
+====Noun====
 {{ja-noun|むかし}}
 
 # the [[past]], [[old]] times
