--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -166,7 +166,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 *: Roman: {{t+|sh|želudac|m}}, {{t+|sh|stomak|m}}
 * Sicilian: {{t-needed|scn}}
 * Sindhi: {{t-needed|sd}}
-* Sinhalese: {{t+|si|බඩ|tr=baḍa|sc=Sinh}}
+* Sinhalese: {{t+|si|බඩ|sc=Sinh}}
 * Slovak: {{t|sk|žalúdok|m}}
 * Slovene: {{t+|sl|želodec|m}}
 * Somali: {{t-needed|so}}
