--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -25,7 +25,8 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 |ma=y
 |c=zou2
 |h=pfs=chó
-|mn=chá/chái
+|mn=qz:chó͘/xm,zz:chó/qz,tw,xm,zz:chá/qz,tw,xm,zz:chái
+|mn_note=chó͘/chó - literary, chá - vernacular, chái - vernacular (for certain words)
 |w=2tsau
 |mc=y
 |oc=y
