--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -17,48 +17,56 @@
 
 ===Glyph origin===
 {{Han etym}}
+Oracle bone and bronze inscriptions: original form of {{och-l|賜|to confer, to bestow}}; specialised from {{och-l|益|to benefit}}.
 
-===Pronunciation===
+''{{w|Shuowen}}'': {{liushu|p|nocap=1}}, original form of {{och-l|蜴|lizard}}.
+
+===Pronunciation 1===
 {{zh-pron
 |m=yì
-|c=ji6,jik6
-|mn=ia̍h/e̍k/ī
-|mn_note=ia̍h - vernacular, e̍k - literary
-|mc=y
-|oc=y
-|ma=
-|cat=v,a
+|c=jik6
+|h=pfs=yit
+|md=ĭk
+|mn=ia̍h/e̍k
+|mn_note=ia̍h - vernacular; e̍k - literary
+|w=5hhiq
+|mc=2
+|oc=2,2
+|cat=v,pn
 }}
 
-===Verb===
-{{zh-verb}}
+====Definitions====
+{{zh-hanzi}}
 
-# to [[change]]
+# to [[exchange]]; to [[interchange]]
+# to [[change]]; to [[alter]]; to [[modify]]
+# {{zh-short|易經|[[I Ching]]}}
+# {{surname|lang=zh}}
 
-===Adjective===
-{{zh-adj}}
+===Pronunciation 2===
+{{zh-pron
+|m=yì
+|c=ji6
+|h=pfs=yi
+|md=giê/ê
+|md_note=giê - vernacular; ê - literary
+|mn=ī
+|w=3hhi
+|mc=1
+|oc=1,1
+|cat=a,adv
+}}
 
-# [[easy]]; a [[breeze]]
-# (of an action) [[easy]] to do
+====Definitions====
+{{zh-hanzi}}
 
-===Prefix===
-{{zh-pref}}
-
-# [[easily]]
+# [[easy]]; [[simple]]; not [[difficult]]
+# [[gentle]]; [[kind]]
+# [[effortless]]; [[prone]] to
+# [[easily]]; [[effortlessly]]
 
 ===Compounds===
-* {{zh-l|易貨貿易}}
-* {{zh-l|易拉罐}}
-* {{zh-l|易經|yìjīng|[[I Ching]]}}
-* {{zh-l|易燃物}}
-* {{zh-l|易熔合金}}
-* {{zh-l|易如反掌}}
-* {{zh-l|易手}}
-* {{zh-l|易于}}
-* {{zh-l|易幟}}
-
-====References====
-* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/default.jsp Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+{{zh-der|易貨貿易|易拉罐|易經:[[I Ching]]|易燃物|易熔合金|易如反掌|易手|易于|易幟|一定不易|一成不易|三不易|三角貿易|不容易|不易|不易一字|不易之論|不輕容易|交易|交易單位|交易所|交易稅|以暴易亂|以暴易暴|以物易物|來之不易|保護貿易|信用交易|內線交易|公平交易|冠履倒易|出口貿易|博易|卜易|反掌之易|周易|味勝易牙|和易|器小易盈|回易|國營貿易|國際貿易|坦易|場外交易|多邊貿易|大不易|夷易|好不容易|好容易|始終不易|容易|實物交易|對外貿易|對等貿易|小器易盈|居大不易|居易|嶢嶢易缺|平心易氣|平易|平易謙沖|平易近人|平易近民|彩雲易散|得來不易|情詞易工|慢易|拔幟易幟|撫梁易柱|改名易姓|改弦易張|改弦易調|改弦易轍|改張易調|改易|改轅易轍|易主|易人|易位|易例|易俗|易俗移風|易傳|易元吉|易刑處分|易則|易加卡|易北河|易卜生 |易可|易名|易圖明辨|易地|易堂九子|易墓|易如拾芥|易如翻掌|易姓|易子析骸|易子而食|易子而飧|易字|易學|易學啓蒙|易守難攻|易容|易帶|易感性|易於反掌|易易|易林|易水|易水寒|易水歌|易漢學|易牙|易牙之味|易牙蒸子|易玄光|易知由單|易科|易科罰金|易筋經|易簀|易與|易轍|易通釋|易開罐|易順鼎|時移世易|時移俗易|更弦易轍|更易|未易才|李易安|析骸易子|樂易|沿岸貿易|流易|深耕易耨|淺易|淺而易見|淺顯易懂|炊骨易子|無形貿易|白居易|百世不易|盛筵易散|直接貿易|相易|眾擎易舉|知易行難|知難行易|祕密交易|移天易日|移易|移風易俗|空中交易|立券交易|簡易|簡易師範|線上交易|聖路易|脫易|談何容易|變名易姓|變故易常|變易|變色易容|變風易俗|貿易|貿易保護|貿易區|貿易協定|貿易商|貿易差額|貿易收支|貿易網路|貿易赤字|貿易逆差|貿易順差|貿易額|貿易風|賢賢易色|路易十三|路易十六|路易十四|輕易|輕而易舉|轉口貿易|轉帳交易|辟易|通功易事|進口貿易|道近易從|避難就易|鄙易|量小易盈|間接貿易|陰陽易位|險易|雙邊貿易|難易|難易適中|零股交易|非同容易|革易|顯而易見|風移俗易|馮唐易老|驕易}}
 
 ----
 
