t+nds-de:[[Brügge]] ([[WT:EDIT|Assisted]]) <bridge#40858879>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -178,6 +178,8 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Laz: {{t|lzz|ხინჯი}}
 * Lingala: {{t|ln|gwagwa}}, {{t|ln|gbagba}}
 * Lithuanian: {{t+|lt|tiltas|m}}
+* Low German:
+*: German Low German: {{t|nds-de|Brügge|f}}
 * Luganda: {{t|lg|olutindo}}
 * Lun Bawang: {{t|lnd|afir}}
 * Luxembourgish: {{t+|lb|Bréck|f}}
