--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -252,6 +252,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Tboli: {{t|tbl|kitay}}
 * Telugu: {{t+|te|వంతెన|sc=Telu}}, {{t+|te|వారధి|sc=Telu}}, {{t+|te|సేతువు|sc=Telu}}
 * Thai: {{t+|th|สะพาน|tr=sàpaan|sc=Thai}}
+* Tibetan: {{t|bo|ཟམ་པ}}
 * Tigrinya: {{t|ti|ድልድል|sc=Ethi}}
 * Tongan: {{t|to|hale kavakava}}
 * Tswana: {{t|tn|borogo}}
