--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -59,14 +59,14 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t|ar|مَعِدَة|f}}, {{t|ar|مِعْدَة|f}}
 *: Egyptian Arabic: {{t|arz|معدة|f|tr=meʕda|sc=Arab}}
-* Aragonese: {{t-needed|an}}
+* Aragonese: {{t+|an|estomago|m|}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (’isṬōmkā’) {{g|m}}
 *: Hebrew: [[אסטומכא]] (’isṬōmkā’) {{g|m}}
 * Armenian: {{t+|hy|ստամոքս}}
 * Assamese: {{t-needed|as}}
 * Asturian: {{t+|ast|estómagu|m}}
-* Aymara: {{t-needed|ay}}
+* Aymara: {{t+|ay|puraka}}
 * Azeri: {{t+|az|mədə}}, {{t+|az|qarın}}
 * Bashkir: {{t|ba|ашҡаҙан}}
 * Bau Bidayuh: {{t|sne|toin}}, {{t|sne|kubuoi}}
@@ -95,7 +95,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Extremaduran: {{t-needed|ext}}
 * Finnish: {{t+|fi|mahalaukku}}, {{t+|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
-* Friulian: {{t-needed|fur}}
+* Friulian: {{t|fur|stomi|m}}
 * Galician: {{t+|gl|estómago|m}}
 * Georgian: {{t|ka|კუჭი}}, {{t|ka|სტომაქი}}, {{t|ka|სტვამაქი}}
 * German: {{t+|de|Magen|m}}
@@ -164,12 +164,12 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m|sc=Cyrl}}, {{t|sh|стомак|m|sc=Cyrl}}
 *: Roman: {{t+|sh|želudac|m}}, {{t+|sh|stomak|m}}
-* Sicilian: {{t-needed|scn}}
+* Sicilian: {{t+|scn|stòmmacu|m}}
 * Sindhi: {{t-needed|sd}}
 * Sinhalese: {{t+|si|බඩ|sc=Sinh}}
 * Slovak: {{t|sk|žalúdok|m}}
 * Slovene: {{t+|sl|želodec|m}}
-* Somali: {{t-needed|so}}
+* Somali: {{t|so|calool}}
 * Spanish: {{t+|es|estómago|m}}
 * Sundanese: {{t|su|ᮘᮥᮛᮤᮂ}}
 * Swahili: {{t+|sw|utumbo|c5|c6}}
@@ -188,7 +188,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Ukrainian: {{t+|uk|шлу́нок|m}}
 * Upper Sorbian: {{t|hsb|žołdk|m}}
 * Uzbek: {{t+|uz|qorin}}
-* Venetian: {{t-needed|vec}}
+* Venetian: {{t+|vec|stómego|m}}
 * Vietnamese: {{t+|vi|dạ dày}}
 * Vilamovian: {{t|wym|maoga}}
 * Volapük: {{t+|vo|stomäg}}
