--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -30,8 +30,8 @@
 
 # [[evil]], [[wicked]], [[mean]], [[bad]], [[foul]]
 #: {{zh-ant|善}}
-#: {{zh-x|惡毒|malicious}}
-#: {{zh-x|他 經常 做惡，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
+#: {{zh-x|惡{è}毒|malicious}}
+#: {{zh-x|他 經常 做惡{è}，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
 
 ===Pronunciation 2===
 {{zh-pron
