--- a/en/圸/圸.12986.wikitext
+++ b/en/圸/圸.12986.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GU,XGU|ids=⿰土山}}
 
-# {{defn|Han|sort=土03}}
+# [[cliff]] (Only used for Japanese proper name.)
 
 ====References====
 * {{Han ref|kx=0224.181|hdz=10419.061|uh=5738|ud=22328}}
