/* Translations */ Removing {{t+check}} ; fixing translation <e.g.#40967574>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -43,7 +43,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Estonian: {{qualifier|[[näiteks]]}} {{t+|et|nt}}
 * Faroese: {{t|fo|t.d.}} {{qualifier|{{t|fo|til dømis}}}}
 * Finnish: {{qualifier|[[esimerkiksi]]}} {{t+|fi|esim.}}
-* French: {{t+check|fr|par ex.}}, {{t+check|fr|p. ex.}} {{qualifier|[[par exemple]]}} <!-- are both right? -->
+* French: {{t|fr|par ex.}} {{qualifier|[[par exemple]]}}
 * Georgian: {{t+|ka|მაგ.}}
 * German: {{qualifier|[[zum Beispiel]]}} {{t+|de|z. B.}} (dated: {{qualifier|[[zum Exempel]]}} {{t|de|z. E.}}), {{qualifier|[[beispielsweise]]}} {{t+|de|bspw.}}
 * Greek: {{t+|el|π.χ.}}, {{t+|el|παραδείγματος χάριν}}
