t+qu:[[t'uksiy]] ([[WT:EDIT|Assisted]]) <stab#41069953>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -72,6 +72,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 {{trans-mid}}
 * Norwegian: {{t+|no|stikk|n}}
 * Portuguese: {{t+|pt|punhalada|f}}
+* Quechua: {{t|qu|t'uksiy}}
 * Russian: {{t|ru|колотая ра́на|f}}
 * Spanish: {{t+|es|puñalada|f}}, {{t+|es|cuchillada|f}}
 * Tagalog: {{t|tl|saksak}}
