/* Translations */ Okinawan 煉瓦 <brick#41084731>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -103,7 +103,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Indonesian: {{t|id|batu bata}}
 * Irish: {{t|ga|bríce|m}}
 * Italian: {{t+|it|mattone}}
-* Japanese: {{t|ja|煉瓦|tr=れんが, renga}}, {{t+|ja|れんが|tr=renga|sc=Jpan}}
+* Japanese: {{t|ja|煉瓦|tr=れんが, renga}}
 * Norman: {{t|nrf|brique|f}}
 * Kannada: {{t+|kn|ಇಟ್ಟಿಗೆ|sc=Knda}}
 * Kazakh: {{t+|kk|кірпіш|sc=Cyrl}}
@@ -128,6 +128,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 *: Nynorsk: {{t|nn|murstein|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t|oc|brica|f}}
+* Okinawan: {{t|ryu|煉瓦|tr=りんぐぁ, ringwa}}
 * Oriya: {{t+|or|ଇଟା|sc=Orya}}
 * Ossetian: {{t|os|агуыридур|sc=Cyrl}}
 * Pali: {{t|pi|iṭṭhakā}}
@@ -189,8 +190,10 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Greek: {{t+|el|τούβλο|n}}
 * Icelandic: {{t+|is|múrsteinn|m}}, {{t|is|byggingarklossar|m-p}}, {{t|is|byggingarkubbar|n-p}}
 * Irish: {{t|ga|bríce|m}}
+* Japanese: {{t|ja|煉瓦|tr=れんが, renga}}
 * Latvian: {{t+|lv|ķieģelis|m}}
 * Macedonian: {{t|mk|ци́гла|f|sc=Cyrl}}, {{t|mk|ту́ла|f|sc=Cyrl}}
+* Okinawan: {{t|ryu|煉瓦|tr=りんぐぁ, ringwa}}
 * Polish: {{t+|pl|cegła|f}}
 * Portuguese: {{t+|pt|tijolo|m}}
 * Romanian: {{t+|ro|cărămidă}}
