/* Norwegian Bokmål */ different map <New Zealand#41099782>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -197,7 +197,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 
 ==Norwegian Bokmål==
 {{wikipedia|lang=nb}}
-[[File:New Zealand location map.svg|thumb|New Zealand location map]]
+[[File:New Zealand map.PNG|thumb]]
 {{wikipedia|lang=nn}}
 
 ===Proper noun===
