--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -28,7 +28,7 @@ Note: The right-middle part could be found as [[亾]] instead of [[亡]].
 |ma=Zh-huang.ogg
 |cat=
 }}
-{{attention|zh|needs split}}
+{{zh-attn-split}}
 
 ===Definitions===
 {{zh-hanzi}}
