--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -24,7 +24,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 |m=xiǎng
 |c=soeng2
 |h=pfs=sióng
-|mn=siūⁿ/sióng
+|mn=xm,tp,kh,sx,yl,km,mg,hc,tc:siūⁿ/qz,lk:siǔⁿ/zz,tn:siōⁿ/sióng
 |mn_note=siūⁿ - vernacular, sióng - literary
 |w=2xian
 |mc=y
