/* Noun */ fi translations <branch#41140798>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -55,7 +55,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * {{sense|part of a tree}} {{l|en|bough}}, {{l|en|tillow}}, {{l|en|twig}}, see also [[Wikisaurus:tree]]
 
 ====Translations====
-{{trans-top|woody part of a tree arising from the trunk and usually dividing}}
+{{trans-top|woody part of a tree arising from the trunk}}
 * Afrikaans: {{t+|af|tak}}
 * Albanian: {{t+|sq|degë|f}}
 * Arabic: {{t|ar|فَرْع|m}}
@@ -154,7 +154,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * ǃXóõ: {{qualifier|small one}} {{t|nmn|gǀkxʻāa-kú}}
 {{trans-bottom}}
 
-{{trans-top|something that divides like the branch of a tree}}
+{{trans-top|part that divides like the branch of a tree}}
 * Armenian: {{t+|hy|ճյուղ}}
 * Bulgarian: {{t+|bg|разклоне́ние|n}}
 * Chinese:
@@ -185,7 +185,13 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Walloon: {{t|wa|brantche|f}}, {{t+|wa|fotche|f}}, {{t+|wa|fortcheure|f}}
 {{trans-bottom}}
 
-{{trans-top|geometry: one of the portions of a curve}}
+{{trans-top|creek or stream which flows into a larger river}}
+* Finnish: {{t|fi|sivujoki}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|geometry: one of the portions of a curvethat extends to infinity}}
+* Finnish: {{t|fi|haara}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -198,7 +204,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Czech: {{t|cs|pobočka|f}}
 * Danish: {{t+|da|filial|c}}
 * Dutch: {{t+|nl|filiaal}}
-* Finnish: {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}
+* Finnish: {{t|fi|toimipaikka}}; {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}, {{t|fi|haaraosasto}}
 * French: {{t+|fr|filiale|f}}, {{t+|fr|succursale|f}}
 * German: {{t|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
 * Greek: {{t+|el|υποκατάστημα|n|sc=Grek}}
@@ -226,14 +232,15 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Yiddish: {{t|yi|פֿיליאַל|m|sc=Hebr}}
 {{trans-bottom}}
 
-{{trans-top|a line of family descent}}
+{{trans-top|line of family descent}}
+* Finnish: {{t|fi|sukuhaara}}
 * French: {{t+|fr|branche|f}}
-* Ido: {{t+|io|brancho}}, {{t+|io|ramo}}
 {{trans-mid}}
+* Ido: {{t+|io|brancho}}, {{t+|io|ramo}}
 * Maori: {{t|mi|oka}}, {{t|mi|toronga}}
 {{trans-bottom}}
 
-{{trans-top|small congregation of the LDS Church}}
+{{trans-top|Mormonism: small congregation}}
 * Russian: {{t+|ru|прихо́д|m}}
 {{trans-mid}}
 * Serbo-Croatian: {{t+|sh|ogranak|m}}
@@ -266,9 +273,16 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Yiddish: {{t|yi|בראַנזשע|f|sc=Hebr}}
 {{trans-bottom}}
 
-{{trans-top|certificate given by Trinity House}}
+{{trans-top|nautical: pilot's certificate}}
+* Finnish: {{t|fi|luotsikirja}}
 {{trans-mid}}
 {{trans-bottom}}
+
+{{trans-top|computer architecture: conditional sequence of code}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|rail transport: branch line|branch line}}
 
 {{checktrans-top}}
 * Indonesian: {{t-check|id|cabang}}
