--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -16,18 +16,18 @@
 
 ===Glyph origin===
 {{Han etym}}
-Modern form: {{Han compound|音|心|t2=heart|ls=ic}}. Top component is unrelated to {{zh-l|*音}}.
+Modern form: {{Han compound|音|心|t2=heart|ls=ic}}. However, the top component is etymologically unrelated to {{zh-l|*音}}.
 
 ===Pronunciation===
 {{zh-pron
 |m=yì
 |c=ji3
 |h=pfs=yi
+|md=é
 |mn=ì
 |w=2i
 |mc=y
 |oc=y
-|ma=
 |cat=n,v
 }}
 
