--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -15,7 +15,7 @@
 
 ===Glyph origin===
 {{Han etyl}}
-The traditional etymology follows the modern form in finding {{liushu|ic}}: {{zh-l|*日|sun}} + {{zh-l|*月|moon}}. However, the etymology may be somewhat less simple, as alleged older forms of the character show the moon shining through a window ({{zh-l|*朙}}).
+Traditionally interpreted as an {{liushu|ic|nocap=1}}: {{zh-l|*日|sun}} + {{zh-l|*月|moon}}. However, the etymology may be more complex, as older forms of the character show the moon shining through a window ({{zh-l|*朙}}).
 
 ===Pronunciation===
 {{zh-pron
@@ -25,7 +25,7 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{zh
 |md=màng/mìng
 |md_note=màng - vernacular; mìng - literary
 |mn=bîn/mê/miâ/bêng
-|mn_note=bîn/mê/miâ - vernacular, bêng - literary
+|mn_note=bîn/mê/miâ - vernacular; bêng - literary
 |w=3men,3min
 |w_note=3men - vernacular; 3min - literary
 |mc=y
@@ -41,7 +41,7 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{zh
 # [[tomorrow]]
 # [[next]]; [[following]]
 # to [[understand]]
-#: {{zh-l|講明|to explain}}
+#: {{zh-x|講明|to explain}}
 #* {{zh-x|如果{gwo2} 你 唔 明 就 要{jiu3} 講畀 我 聽。|If you don't '''understand''' then you have to tell me.|C}}
 # [[w:Ming Dynasty|Ming Dynasty]]
 # {{surname|lang=zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
