--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -18,7 +18,7 @@ From {{etyl|la|en}} {{m|la|i.e.}}, an abbreviation of {{m|la|id est||it is}}.
 
 ====Usage notes====
 * Often confused with '''[[e.g.]]''': '''i.e.''' is used to [[explain]], [[clarify]] or [[rephrase]] a statement; '''[[e.g.]]''' is used to list examples.
-* American English prefers a comma after '''i.e.'''; (<--that's a semi colon fucktards not a comma ) in British English a comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
+* American English prefers a comma after '''i.e.'''; <--that's a semi colon idiots not a comma ! in British English a comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
 * Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviations|"Abbreviations" on Wikipedia]]).
 * i.e. differs from [[viz.]] in that what follows merely restates what was said in other words, rather than expanding upon what has already been said; and from e.g. in that completeness or near-completeness is suggested, rather than a small selection of examples.
 
