--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -16,12 +16,21 @@
 ===Pronunciation===
 {{zh-pron
 |m=lèng
-|c=ling6
-|mc=
-|oc=
-|ma=Zh-lèng.ogg
-|cat=v
+|c=ling4,leng1,ling6
+|ma=y
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|一愣|愣頭愣腦|二不愣|愣愣瞌瞌|二愣子|愣頭磕腦|愣頭兒青|愣蔥|愣眼巴睜|愣怔|愣兒|二愣|愣住|愣神兒|愣話|打愣}}
+
+===References===
+* {{R:yue:mfccd}}
 
 ----
 
