--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -13,20 +13,32 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=lèng
-|c=ling4,leng1,ling6
+|c=ling6,ling4
 |ma=y
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{rfdef|zh}}
 
-====Compounds====
+===Pronunciation 1===
+{{zh-pron
+|m=lēng
+|c=leng1
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|愣兒}}
+
+===Compounds===
 {{zh-der|一愣|愣頭愣腦|二不愣|愣愣瞌瞌|二愣子|愣頭磕腦|愣頭兒青|愣蔥|愣眼巴睜|愣怔|愣兒|二愣|愣住|愣神兒|愣話|打愣}}
 
 ===References===
