--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -23,9 +23,16 @@
 |c=hoi2
 |mc=y
 |oc=y
-|ma=
-|cat=v,a
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|愷樂|愷歌|愷悌君子|八愷|愷悌|敏練慈愷|爽愷}}
 
 ----
 
