--- a/en/惻/惻.15631.wikitext
+++ b/en/惻/惻.15631.wikitext
@@ -20,11 +20,22 @@
 ===Pronunciation===
 {{zh-pron
 |m=cè
-|c=caak1,cak1
+|c=cak1,caak1
 |mc=y
 |oc=y
-|cat=v
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|愴惻|惻怛之心|惻然|惻怛|惻隱之心|惻隱|惻愴|惻惻|悽惻|悱惻|慘惻|憯惻|憫惻|隱惻|纏綿悱惻}}
+
+===References===
+* {{R:yue:mfccd}}
 
 ----
 
