--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -28,8 +28,8 @@
 |c_note=co5 - vernacular; zo6 - literary
 |h=pfs=chhô
 |md=sô̤i
-|mn=chē/chō
-|mn_note=chē - vernacular; chō - literary
+|mn=qz:chǒ͘/tw,xm,zz:chō/qz:chěr/xm,zz:chē/qz:chǒ
+|mn_note=chǒ͘/chō - literary; chěr/chē/chǒ - vernacular
 |w=3zu
 |mc=y
 |oc=y
