--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -6,7 +6,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 
 ===Pronunciation===
 * {{IPA|/ˈkɜːtn̩/|lang=en}}
-* {{audio|En-uk-curtain.ogg|Audio (UK)|lang=en}}
+*AMERICAN  IPA:   /ˈkɜrtən/  /ˈkɝtɂn/{{audio|En-uk-curtain.ogg|Audio (UK)|lang=en}}
 * {{IPA|/ˈkɝtn̩/|lang=en}}
 * {{audio|En-us-curtain.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(r)tən|lang=en}}
