--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -13,6 +13,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * {{audio|en-us-coat.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-coat.ogg|Audio (UK)|lang=en}}
 * {{rhymes|əʊt|lang=en}}
+[[Category:English 1-syllable words]]
 
 ===Noun===
 {{en-noun|~}}
