t+io:[[blondo]] ([[WT:EDIT|Assisted]]) <blond#41199466>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -44,7 +44,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Hindi: {{t|hi|सुनहरे बालोंवाला|sc=Deva}}
 * Hungarian: {{t+|hu|szőke}}
 * Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
-* Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}
+* Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{g|m}}, [[bean#Irish|bean]] fhionn {{g|f}}
 * Italian: {{t+|it|biondo|m}}
 {{trans-mid}}
